syntax = "proto3";

package richter.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "example.com/buf/gen/richter/v1;richterv1";

// ── Enums ─────────────────────────────────────────────────────────────────────

enum FeedbackMode {
  FEEDBACK_MODE_UNSPECIFIED = 0;
  // Correct answers are never revealed to students.
  FEEDBACK_MODE_HIDDEN = 1;
  // Correct answers are revealed only after the student submits their attempt.
  FEEDBACK_MODE_AFTER_SUBMIT = 2;
  // Correct answers are revealed immediately after each interaction is answered.
  FEEDBACK_MODE_AFTER_EACH = 3;
}

enum InteractionKind {
  INTERACTION_KIND_UNSPECIFIED = 0;
  INTERACTION_KIND_SINGLE_CHOICE = 1;
  INTERACTION_KIND_FILL_BLANK = 2;
  INTERACTION_KIND_LISTENING = 3;
  INTERACTION_KIND_READING = 4;
  INTERACTION_KIND_MULTIPLE_CHOICE = 5;
  INTERACTION_KIND_WRITING = 6;
}

enum ReadingMode {
  READING_MODE_UNSPECIFIED = 0;
  // Student reads the passage aloud; AI grades pronunciation.
  READING_MODE_PRONUNCIATION = 1;
  // Student speaks an answer to a question; AI grades content + pronunciation.
  READING_MODE_OPEN_ANSWER = 2;
}

// ── MCQ config ────────────────────────────────────────────────────────────────

message McqOption {
  string text = 1;
}

message McqConfig {
  repeated McqOption options = 1;
  // correct_answer is stripped (set to -1) for students before submission,
  // unless feedback_mode == AFTER_EACH. Server enforces this as defense-in-depth.
  int32 correct_answer = 2;
  // correct_answers is used for MULTIPLE_CHOICE (set to empty for students)
  repeated int32 correct_answers = 3;
  // Optional question text for nested MCQs, e.g. listening comprehension items.
  string question = 4;
}

// ── Fill-blank config ─────────────────────────────────────────────────────────

message Blank {
  repeated string accepted = 1 [(buf.validate.field).repeated.min_items = 1];
  bool case_sensitive = 2;
  string hint = 3;
}

message FillBlankConfig {
  // Template with {{i}} placeholders, e.g. "Năng lượng không thể {{0}} mà chỉ {{1}}."
  string template = 1 [(buf.validate.field).string.min_len = 1];
  repeated Blank blanks = 2 [(buf.validate.field).repeated.min_items = 1];
}

message FillBlankResponse {
  // Index aligns with FillBlankConfig.blanks
  repeated string answers = 1;
}

// ── Listening config ──────────────────────────────────────────────────────────

// A listening exercise is a single multiple-choice question whose QUESTION is
// delivered as AUDIO, synthesised from audio_source_text. (The legacy dictation
// mode + its expected_text were removed; fields 3 and 4 are reserved.)
message ListeningConfig {
  reserved 3, 4;
  reserved "mode", "expected_text";
  // Storage object key — frontend fetches a presigned download URL at render time.
  // Empty on the editor's write: the audio is synthesised server-side from
  // audio_source_text (the question) and the key is filled in by the handler.
  string audio_object_key = 1;
  int32 duration_seconds = 2;
  // The single MCQ's answer options (its question text stays empty — the audio is
  // the question). Kept as a list for storage/grading compatibility.
  repeated McqConfig comprehension_questions = 5;
  // The question TEXT — the source of truth the teacher edits; the spoken audio is
  // (re)synthesised from it on save (TTS). Exposed to the editor only; the student
  // hears the audio and never reads it. Bounded to cap TTS cost/latency.
  string audio_source_text = 6 [(buf.validate.field).string.max_len = 2000];
}

message ListeningResponse {
  reserved 1;
  reserved "transcription";
  // Selected option index per comprehension_question (parallel array).
  repeated int32 comprehension_answers = 2;
}

// ── Reading config ────────────────────────────────────────────────────────────

message ReadingConfig {
  ReadingMode mode = 1 [(buf.validate.field).enum = {defined_only: true, not_in: [0]}];
  // The passage to read aloud (used in both modes).
  string passage_markdown = 2 [(buf.validate.field).string.min_len = 1];
  // OPEN_ANSWER only: the question the student must answer verbally.
  string question = 3;
  // OPEN_ANSWER only: gold answer used by Gemini for content grading and
  // shown to the student after submit. Stripped from student-facing config.
  string expected_answer = 4;
}

message ReadingResponse {
  // Storage object key of the student's recorded audio.
  string audio_object_key = 1;
}

// ── Writing config ────────────────────────────────────────────────────────────

message WritingConfig {
  // The essay prompt / topic the student must write about (also mirrored into
  // LessonInteraction.prompt for display).
  string prompt = 1 [(buf.validate.field).string.min_len = 1];
  // Optional grading rubric / guidance, shown to the student and used by the AI grader.
  string rubric = 2;
  // Optional model answer used by Gemini for content grading; stripped from the
  // student-facing config (like reading.expected_answer).
  string expected_answer = 3;
  // Optional minimum word count to accept the submission (0 = no minimum).
  int32 min_words = 4 [(buf.validate.field).int32.gte = 0];
}

message WritingResponse {
  // The student's written essay.
  string text = 1;
}

// ── LessonInteraction ─────────────────────────────────────────────────────────

message LessonInteraction {
  string id = 1;
  string lesson_id = 2;
  string chunk_id = 3;
  float start_seconds = 4;
  int32 order_index = 5;
  InteractionKind kind = 6;
  string prompt = 7;
  // explanation is stripped for students before submission (unless AFTER_EACH).
  string explanation = 8;
  float max_score = 9;
  string generated_by = 10;
  google.protobuf.Timestamp created_at = 11;
  oneof config {
    McqConfig mcq = 20;
    FillBlankConfig fill_blank = 21;
    ListeningConfig listening = 22;
    ReadingConfig reading = 23;
    WritingConfig writing = 24;
  }
}

// ── Attempt ───────────────────────────────────────────────────────────────────

message LessonAttempt {
  string id = 1;
  string lesson_id = 2;
  string user_id = 3;
  float total_score = 4;
  float max_score = 5;
  string status = 6;
  google.protobuf.Timestamp submitted_at = 7;
  repeated LessonAttemptResponse responses = 8;
  int32 attempt_count = 9;
}

message McqMultipleResponse {
  repeated int32 selected_indexes = 1;
}

message LessonAttemptResponse {
  string interaction_id = 1;
  float score = 2;
  float max_score = 3;
  string feedback = 4;
  oneof response {
    int32 mcq_selected = 20;
    FillBlankResponse fill_blank = 21;
    ListeningResponse listening = 22;
    ReadingResponse reading = 23;
    McqMultipleResponse mcq_multiple = 24;
    WritingResponse writing = 25;
  }
}

// ── InteractionService RPCs ───────────────────────────────────────────────────

message ListLessonInteractionsRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 500}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListLessonInteractionsResponse {
  repeated LessonInteraction interactions = 1;
}

message CreateManualInteractionRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  string prompt = 2 [(buf.validate.field).string.min_len = 1];
  string explanation = 3;
  float start_seconds = 4 [(buf.validate.field).float.gte = 0];
  string chunk_id = 5;
  oneof config {
    McqConfig mcq = 20;
    FillBlankConfig fill_blank = 21;
    ListeningConfig listening = 22;
    ReadingConfig reading = 23;
    WritingConfig writing = 24;
  }
}

message CreateManualInteractionResponse {
  LessonInteraction interaction = 1;
}

message UpdateInteractionRequest {
  string interaction_id = 1 [(buf.validate.field).string.uuid = true];
  string prompt = 2 [(buf.validate.field).string.min_len = 1];
  string explanation = 3;
  float start_seconds = 4 [(buf.validate.field).float.gte = 0];
  oneof config {
    McqConfig mcq = 20;
    FillBlankConfig fill_blank = 21;
    ListeningConfig listening = 22;
    ReadingConfig reading = 23;
    WritingConfig writing = 24;
  }
}

message UpdateInteractionResponse {
  LessonInteraction interaction = 1;
}

message DeleteInteractionRequest {
  string interaction_id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteInteractionResponse {}

message DeleteLessonInteractionsRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  // Optional. When set, only interactions attached to this chunk are deleted.
  string chunk_id = 2;
}

message DeleteLessonInteractionsResponse {}

// ── Regenerate single ─────────────────────────────────────────────────────────

message RegenerateInteractionRequest {
  string interaction_id = 1 [(buf.validate.field).string.uuid = true];
  // If unspecified, keep the existing kind.
  InteractionKind new_kind = 2;
  // Custom prompt / instructions to rewrite/edit the question with AI Magic.
  string custom_prompt = 3;
}

message RegenerateInteractionResponse {
  LessonInteraction interaction = 1;
}

// ── Submit / Get attempt ─────────────────────────────────────────────────────

message AttemptResponseInput {
  string interaction_id = 1 [(buf.validate.field).string.uuid = true];
  // Time the student took to answer this interaction, in milliseconds. Optional.
  int32 time_to_answer_ms = 2 [(buf.validate.field).int32.gte = 0];
  // Number of times the student replayed the video segment for this interaction.
  int32 replay_count = 3 [(buf.validate.field).int32.gte = 0];
  oneof response {
    int32 mcq_selected = 20;
    FillBlankResponse fill_blank = 21;
    ListeningResponse listening = 22;
    ReadingResponse reading = 23;
    McqMultipleResponse mcq_multiple = 24;
    WritingResponse writing = 25;
  }
}

message SubmitAttemptRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  repeated AttemptResponseInput responses = 2 [(buf.validate.field).repeated.min_items = 1];
  // Fraction of the video watched before submitting (0..1). Optional.
  double video_watch_fraction = 3 [(buf.validate.field).double = {gte: 0, lte: 1}];
}

message SubmitAttemptResponse {
  LessonAttempt attempt = 1;
}

message GetMyAttemptRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetMyAttemptResponse {
  LessonAttempt attempt = 1;
}

message StudentAttemptSummary {
  string user_id = 1;
  string display_name = 2;
  string email = 3;
  float total_score = 4;
  float max_score = 5;
  google.protobuf.Timestamp submitted_at = 6;
  int32 attempt_count = 7;
  // Average time to answer across all responses, in milliseconds.
  double avg_time_to_answer_ms = 8;
  // Fraction of the lesson video the student watched (0..1).
  double video_watch_fraction = 9;
  // Composite engagement score (0..100).
  double engagement_score = 10;
  double time_on_task_ms = 11;
  double response_rate = 12;
  double avg_replay_count = 13;
}

message ListAttemptsRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListAttemptsResponse {
  repeated StudentAttemptSummary attempts = 1;
  int32 total = 2;
}

// Used by AFTER_EACH feedback for interactions where grading requires a server
// roundtrip (e.g. reading audio -> Gemini). The result is cached so SubmitAttempt
// can reuse it when the response has not changed.
message PreviewGradeRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  AttemptResponseInput response = 2;
}

message PreviewGradeResponse {
  float score = 1;
  float max_score = 2;
  string feedback = 3;
}

// Saves and grades one in-progress response. The server may cache the real
// score/feedback for fast final submit, but only reveals them when feedback_mode
// permits per-question feedback.
message SaveAttemptResponseRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
  AttemptResponseInput response = 2;
}

message SaveAttemptResponseResponse {
  float score = 1;
  float max_score = 2;
  string feedback = 3;
  bool feedback_revealed = 4;
}

// ── Analytics ────────────────────────────────────────────────────────────────

// Per-student summary across all lessons in a course (teacher/admin view).
message CourseStudentSummary {
  string user_id = 1;
  string display_name = 2;
  string email = 3;
  // Progress: number of distinct lessons this student has submitted an attempt
  // for, regardless of score (matches the student-facing course progress).
  int32 lessons_completed = 4;
  // Total number of lessons in the course.
  int32 lessons_total = 5;
  // Average score fraction across all submitted attempts (total_score / max_score).
  double avg_score = 6;
  // Composite engagement score (0..100).
  double engagement_score = 7;
  // Timestamp of the most recent attempt submission.
  google.protobuf.Timestamp last_active = 8;
  double response_rate = 9;
  // 10 was lessons_passed (mastery) — removed with the completion-thresholds feature.
  reserved 10;
  // Average fraction of lesson videos watched across attempts (0..1).
  double avg_video_watch_fraction = 11;
  // ── Raw totals (for the "Tổng" mode of the results table; the fields above
  //    are averages/fractions for the "Trung bình" mode) ──
  // Sum of total_score (points earned) across all submitted attempts.
  double total_score = 12;
  // Sum of max_score (points available) across all submitted attempts.
  double total_max_score = 13;
  // Total interactions answered across all attempted lessons.
  int32 total_responses = 14;
  // Total interactions available across all attempted lessons.
  int32 total_interactions = 15;
  // Total time-on-task (ms) summed across all responses.
  double total_time_ms = 16;
}

message ChunkScoreCell {
  string chunk_id = 1;
  int32 chunk_index = 2;
  float start_seconds = 3;
  float end_seconds = 4;
  string summary = 5;
  double avg_score = 6;
  int32 response_count = 7;
  int32 student_count = 8;
  bool is_gap = 9;
}

message LessonHeatmapRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
}

// One student's score on a single chunk (heatmap drill-down).
message ChunkStudentScore {
  string user_id = 1;
  string display_name = 2;
  string email = 3;
  // score_frac is this student's score/max on the chunk's questions (0..1).
  double score_frac = 4;
  // answered = how many of the chunk's questions the student answered.
  int32 answered = 5;
}

// All students' scores for one chunk — the click-to-expand list under a heatmap cell.
message ChunkStudentBreakdown {
  string chunk_id = 1;
  repeated ChunkStudentScore students = 2;
}

message LessonHeatmapResponse {
  repeated ChunkScoreCell cells = 1;
  double gap_threshold = 2;
  // Per-chunk student breakdowns so the UI can list who is in each segment when
  // a cell is clicked, without a second round-trip.
  repeated ChunkStudentBreakdown breakdowns = 3;
}

message AtRiskLessonPoint {
  string lesson_id = 1;
  string lesson_title = 2;
  double engagement_score = 3;
}

message AtRiskStudent {
  string user_id = 1;
  string display_name = 2;
  string email = 3;
  repeated AtRiskLessonPoint low_streak = 4;
}

message ListAtRiskStudentsRequest {
  string course_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 200}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListAtRiskStudentsResponse {
  repeated AtRiskStudent students = 1;
  int32 total = 2;
}

message KindAccuracy {
  string kind = 1;
  int32 response_count = 2;
  double accuracy = 3;
}

message McqOptionStat {
  int32 option_index = 1;
  string option_text = 2;
  int32 chosen_count = 3;
  bool is_correct = 4;
}

// QuestionStat is the per-question analysis row for ANY kind. `options` is only
// populated for single-choice MCQ (the answer-distribution bars); for the other
// kinds (multiple choice, fill, reading, listening) it is empty and `accuracy`
// carries the correct fraction so every answered question is shown.
message QuestionStat {
  string interaction_id = 1;
  string kind = 2;
  string prompt = 3;
  int32 response_count = 4;
  double accuracy = 5;
  repeated McqOptionStat options = 6;
}

message GetLessonQuestionAnalyticsRequest {
  string lesson_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetLessonQuestionAnalyticsResponse {
  reserved 2;                  // was mcq_stats (McqInteractionStats) — superseded by question_stats
  reserved "mcq_stats";
  repeated KindAccuracy kind_accuracy = 1;
  double avg_response_length_words = 3;
  // Per-question analysis covering ALL kinds (not just single-choice MCQ).
  repeated QuestionStat question_stats = 4;
}

message ListCourseAttemptsSummaryRequest {
  string course_id = 1 [(buf.validate.field).string.uuid = true];
  int32 limit = 2 [(buf.validate.field).int32 = {gte: 1, lte: 200}];
  int32 offset = 3 [(buf.validate.field).int32.gte = 0];
}

message ListCourseAttemptsSummaryResponse {
  repeated CourseStudentSummary students = 1;
  int64 total = 2;
}

// Per-course progress summary for the authenticated student (self-view).
message MyCourseProgress {
  string course_id = 1;
  string title = 2;
  // Number of distinct lessons the student has submitted at least one attempt for.
  int32 lessons_done = 3;
  // Total number of lessons in the course.
  int32 lessons_total = 4;
  // Average score fraction across all submitted attempts (0..1).
  double avg_score = 5;
  // Slug of the course's owning organization, so the client can deep-link to
  // the course at /dashboard/organizations/{org_slug}/courses/{course_id}.
  string org_slug = 6;
}

message ListMyCourseProgressRequest {
  int32 limit = 1 [(buf.validate.field).int32 = {gte: 1, lte: 200}];
  int32 offset = 2 [(buf.validate.field).int32.gte = 0];
}

message ListMyCourseProgressResponse {
  repeated MyCourseProgress courses = 1;
}

service InteractionService {
  // Teacher: list all interactions for a lesson.
  rpc ListLessonInteractions(ListLessonInteractionsRequest) returns (ListLessonInteractionsResponse) {}
  // Teacher: create a manually authored interaction.
  rpc CreateManualInteraction(CreateManualInteractionRequest) returns (CreateManualInteractionResponse) {}
  // Teacher: edit an existing interaction.
  rpc UpdateInteraction(UpdateInteractionRequest) returns (UpdateInteractionResponse) {}
  // Teacher: delete an interaction.
  rpc DeleteInteraction(DeleteInteractionRequest) returns (DeleteInteractionResponse) {}
  // Teacher: delete all interactions in a lesson or in one transcript chunk.
  rpc DeleteLessonInteractions(DeleteLessonInteractionsRequest) returns (DeleteLessonInteractionsResponse) {}
  // Teacher: AI-regenerate a single interaction (same or new kind).
  rpc RegenerateInteraction(RegenerateInteractionRequest) returns (RegenerateInteractionResponse) {}
  // Teacher: list student attempt summaries for a lesson.
  rpc ListAttempts(ListAttemptsRequest) returns (ListAttemptsResponse) {}
  // Teacher/Admin: list per-student attempt summaries across an entire course.
  rpc ListCourseAttemptsSummary(ListCourseAttemptsSummaryRequest) returns (ListCourseAttemptsSummaryResponse) {}
  // Teacher: per-chunk score heatmap for a lesson.
  rpc LessonHeatmap(LessonHeatmapRequest) returns (LessonHeatmapResponse) {}
  // Teacher/Admin: list students with consecutive low-engagement lesson runs.
  rpc ListAtRiskStudents(ListAtRiskStudentsRequest) returns (ListAtRiskStudentsResponse) {}
  // Teacher: per-question accuracy/distribution analytics for a lesson.
  rpc GetLessonQuestionAnalytics(GetLessonQuestionAnalyticsRequest) returns (GetLessonQuestionAnalyticsResponse) {}

  // Student: submit all interaction responses and receive a graded attempt.
  rpc SubmitAttempt(SubmitAttemptRequest) returns (SubmitAttemptResponse) {}
  // Student: retrieve a previously submitted attempt (may be nil if not yet submitted).
  rpc GetMyAttempt(GetMyAttemptRequest) returns (GetMyAttemptResponse) {}
  // Student: preview the grade for a single response. Used by AFTER_EACH
  // feedback mode when grading needs a server roundtrip (e.g. reading audio).
  rpc PreviewGrade(PreviewGradeRequest) returns (PreviewGradeResponse) {}
  // Student: save/grade one in-progress response so final submit can be fast.
  rpc SaveAttemptResponse(SaveAttemptResponseRequest) returns (SaveAttemptResponseResponse) {}
  // Student: list own course progress (courses where at least one lesson attempt exists).
  rpc ListMyCourseProgress(ListMyCourseProgressRequest) returns (ListMyCourseProgressResponse) {}
}
